Update DescribeClusterInstances API
