# cli/src/pcluster/api/models/describe_cluster_instances_response_content.py
@@ -13,7 +13,7 @@ from typing import List
 
 from pcluster.api import util
 from pcluster.api.models.base_model_ import Model
-from pcluster.api.models.ec2_instance import EC2Instance
+from pcluster.api.models.cluster_instance import ClusterInstance
 
 
 class DescribeClusterInstancesResponseContent(Model):
@@ -22,15 +22,15 @@ class DescribeClusterInstancesResponseContent(Model):
     Do not edit the class manually.
     """
 
-    def __init__(self, instances=None, next_token=None):
+    def __init__(self, instances=None, next_token=None):  # noqa: E501
         """DescribeClusterInstancesResponseContent - a model defined in OpenAPI
 
-        :param instances: The instances of this DescribeClusterInstancesResponseContent.
-        :type instances: List[EC2Instance]
-        :param next_token: The next_token of this DescribeClusterInstancesResponseContent.
+        :param instances: The instances of this DescribeClusterInstancesResponseContent.  # noqa: E501
+        :type instances: List[ClusterInstance]
+        :param next_token: The next_token of this DescribeClusterInstancesResponseContent.  # noqa: E501
         :type next_token: str
         """
-        self.openapi_types = {"instances": List[EC2Instance], "next_token": str}
+        self.openapi_types = {"instances": List[ClusterInstance], "next_token": str}
 
         self.attribute_map = {"instances": "instances", "next_token": "nextToken"}
 
@@ -43,7 +43,7 @@ class DescribeClusterInstancesResponseContent(Model):
 
         :param dikt: A dict.
         :type: dict
-        :return: The DescribeClusterInstancesResponseContent of this DescribeClusterInstancesResponseContent.
+        :return: The DescribeClusterInstancesResponseContent of this DescribeClusterInstancesResponseContent.  # noqa: E501
         :rtype: DescribeClusterInstancesResponseContent
         """
         return util.deserialize_model(dikt, cls)
@@ -54,7 +54,7 @@ class DescribeClusterInstancesResponseContent(Model):
 
 
         :return: The instances of this DescribeClusterInstancesResponseContent.
-        :rtype: List[EC2Instance]
+        :rtype: List[ClusterInstance]
         """
         return self._instances
 
@@ -64,10 +64,10 @@ class DescribeClusterInstancesResponseContent(Model):
 
 
         :param instances: The instances of this DescribeClusterInstancesResponseContent.
-        :type instances: List[EC2Instance]
+        :type instances: List[ClusterInstance]
         """
         if instances is None:
-            raise ValueError("Invalid value for `instances`, must not be `None`")
+            raise ValueError("Invalid value for `instances`, must not be `None`")  # noqa: E501
 
         self._instances = instances
 
@@ -75,7 +75,7 @@ class DescribeClusterInstancesResponseContent(Model):
     def next_token(self):
         """Gets the next_token of this DescribeClusterInstancesResponseContent.
 
-        Token to use for paginated requests.
+        Token to use for paginated requests.  # noqa: E501
 
         :return: The next_token of this DescribeClusterInstancesResponseContent.
         :rtype: str
@@ -86,7 +86,7 @@ class DescribeClusterInstancesResponseContent(Model):
     def next_token(self, next_token):
         """Sets the next_token of this DescribeClusterInstancesResponseContent.
 
-        Token to use for paginated requests.
+        Token to use for paginated requests.  # noqa: E501
 
         :param next_token: The next_token of this DescribeClusterInstancesResponseContent.
         :type next_token: str
